--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ numpy = "*"
 scikit-learn = "*"
 graphviz = "*"
 pandas = "*"
+jupyter = "*"
+tensorflow = "*"
+matplotlib = "*"
+keras = "*"
 
 [dev-packages]
 
